# fedimint-sdk-ffi

./: .gitignore  flake.nix
.github/agents/: review.md
.github/scripts/: run-codex-agent.sh  run-codex-ci-debug.sh
.github/workflows/: codex-agent-review-comment-receiver.yml  codex-agent.yml  codex-ci-debug.yml  codex-review.yml  nix-build.yml  rust-ci.yaml
fedimint-client-uniffi/: Cargo.toml  build.rs  sdallocx_stub.c
fedimint-client-uniffi/src/: lib.rs
