[package]
name = "fedimint-client-uniffi"
version = "0.11.1"
edition = "2021"
license = "MIT"
authors = ["The Fedimint Developers"]
description = "fedimint client for uniffi"
readme = "README.md"
repository = "https://github.com/fedimint/fedimint"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "fedimint_client_uniffi"
path = "src/lib.rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = []
uniffi = []
tokio-multi-thread = ["tokio/rt-multi-thread"]

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3"
# Pin ed25519 and pkcs8 to pre-release versions compatible with ed25519-dalek v3.0.0-pre.1
# (pulled in by iroh). The stable releases pkcs8 v0.11.0 and ed25519 v3.0.0 changed
# pkcs8::Error::KeyMalformed from a unit variant to a tuple variant, breaking
# ed25519-dalek v3.0.0-pre.1/src/signing.rs at compile time.
ed25519 = { version = "=3.0.0-rc.4", default-features = false }
pkcs8 = { version = "=0.11.0-rc.11" }
# Pin aws-lc-rs to 1.15.1 / aws-lc-sys to 0.34.0 (same as Fedi).
# aws-lc-sys v0.35.0 introduced a jitter entropy init bug: SIGSEGV on
# aarch64-android via aws_lc_0_35_0_tree_jitter_initialize → pthread_once → [anon:.bss]
aws-lc-rs = { version = "=1.15.1" }
fedimint-bip39 = { path = "/Users/oms/Coding/opensource/fedimint/fedimint-bip39" }
fedimint-client = { path = "/Users/oms/Coding/opensource/fedimint/fedimint-client", features = ["uniffi"] }
fedimint-connectors = { path = "/Users/oms/Coding/opensource/fedimint/fedimint-connectors" }
fedimint-core = { path = "/Users/oms/Coding/opensource/fedimint/fedimint-core" }
fedimint-derive-secret = { path = "/Users/oms/Coding/opensource/fedimint/crypto/derive-secret" }
fedimint-ln-client = { path = "/Users/oms/Coding/opensource/fedimint/modules/fedimint-ln-client", features = ["uniffi"] }
fedimint-meta-client = { path = "/Users/oms/Coding/opensource/fedimint/modules/fedimint-meta-client", features = ["uniffi"] }
fedimint-mint-client = { path = "/Users/oms/Coding/opensource/fedimint/modules/fedimint-mint-client", features = ["uniffi"] }
fedimint-wallet-client = { path = "/Users/oms/Coding/opensource/fedimint/modules/fedimint-wallet-client", features = ["uniffi"] }
futures = "0.3"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
log = "0.4"
tracing = "0.1"
uniffi = { version = "0.31.1", features = ["cli", "tokio"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fedimint-rocksdb = { path = "/Users/oms/Coding/opensource/fedimint/fedimint-rocksdb" }
socket2 = { version = "0.5.7", features = ["all"] }
tokio = { version = "1.48.0", default-features = false, features = ["sync", "rt-multi-thread", "fs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
fedimint-cursed-redb = { path = "/Users/oms/Coding/opensource/fedimint/fedimint-cursed-redb" }
tokio = { version = "1.48.0", default-features = false, features = ["sync", "rt", "macros", "time", "io-util"] }

[target.'cfg(target_os = "android")'.dependencies] 
android_logger = "0.14"

[build-dependencies]
cc = "1"
fedimint-build = { path = "/Users/oms/Coding/opensource/fedimint/fedimint-build" }
uniffi = { version = "0.31.1", features = ["build"] }

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = "debuginfo" # Partially strip symbols from binary